    clutter the output. [F#14]
  - Failures now only print a part of the stack trace and hides the higher
    calling chain.
  - assert_* functions provide default failure message if none given
  - Failures now recognized by typed error. Still needs magic string for masking
    the actual error message.
  - Sample directory for assert failure outputs.

  - Fix: build.xml did not execute mlUnit tests; report directory was not being
    created; MATLAB automation options conflicted; MATLAB property check failed.
  - Fix: Error prelude not filtered for newer MATLABs (around R2011b)
  - Fix: Test suite functions whose host function is not declared on the very
    first line lead to an unintelligible error.
  - Fix: some numeric arrays deemed equal, even if of different size
  - Fix: assert_not_equals failure message suggests having used assert_equals.

  [F#12] http://sourceforge.net/p/mlunit/feature-requests/12/
  [F#14] http://sourceforge.net/p/mlunit/feature-requests/14/


mlUnit 1.6.6 (2013-12-13)
-------------------------

  - assert_error may take a function handle or an eval string for execution
  - assert_error can check for the error identifier or even the stack
  - Changed assert_warning's argument order, to be consistent with assert_error
    order.
  - Let recursive_test_run print test result overview. [F#14]

  - Fix: wrong assert_* usage yields a failure, but should yield an error
  - Fix: calling assert_warning without arguments is confusing
  - Fix: test_add_error_with_stack depends on specific line numbers and
    frequently fails without reason.
  - Fix: recursive_test_run omits class-based test implementations. [B#16]
    Added dirset function from Zyndric's pathtools.

  [F#14] https://sourceforge.net/p/mlunit/feature-requests/14/
  [B#16] https://sourceforge.net/p/mlunit/bugs/16/


mlUnit 1.6.5 (2013-11-19)
-------------------------

  - Refactored implementation of assert_(not_)equals(_withequalnans).